--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier . --ignore-path .gitignore",
+    "format:check": "npm run prettier -- --check",
+    "format:fix": "npm run prettier -- --write",
+    "lint": "eslint --ext .tsx,.ts ."
   },
   "eslintConfig": {
     "extends": [
@@ -42,13 +46,20 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-security": "^1.5.0",
     "postcss": "^8.4.14",
-<<<<<<< Updated upstream
-    "tailwind": "^4.0.0"
-=======
     "prettier": "^2.7.1",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.6"
->>>>>>> Stashed changes
   }
 }
