--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "prettier": "prettier . --ignore-path .gitignore",
     "format:check": "npm run prettier -- --check",
     "format:fix": "npm run prettier -- --write",
-    "lint": "eslint --ext .tsx,.ts ."
+    "lint": "eslint --ext .tsx,.ts .",
+    "type:check": "tsc",
+    "validate": "run-p lint type:check format:check",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -57,9 +60,16 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-security": "^1.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.1.6"
+  },
+  "lint-staged": {
+    "*.{tsx,ts}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
